// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepHeader > should render 1`] = `
<DocumentFragment>
  <div
    class="w-full sm:mt-8"
  >
    <div
      class="flex flex-col"
    >
      <span
        class="mx-auto mb-2 inline-block font-semibold text-theme-secondary-text sm:hidden"
      >
        title
      </span>
      <ul
        class="flex space-x-3"
      >
        <li
          class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-warning-300"
        />
        <li
          class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
        <li
          class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
        <li
          class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
      </ul>
    </div>
    <div
      class="flex flex-col justify-between sm:flex-row"
    >
      <div
        class="flex items-end justify-between bg-theme-background mt-8 hidden sm:block"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center gap-3"
          >
            <h1
              class="mb-0 text-2xl leading-[29px]"
              data-testid="header__title"
            >
              title
            </h1>
          </div>
          <div
            class="flex items-center leading-5 text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            subtitle
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepHeader > should render simple header without a provider 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex items-center gap-3"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          title
        </h1>
      </div>
      <div
        class="flex items-center leading-5 text-theme-secondary-text"
        data-testid="header__subtitle"
      >
        subtitle
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepHeader > should render with extra 1`] = `
<DocumentFragment>
  <div
    class="w-full sm:mt-8"
  >
    <div
      class="flex flex-col"
    >
      <span
        class="mx-auto mb-2 inline-block font-semibold text-theme-secondary-text sm:hidden"
      >
        title
      </span>
      <ul
        class="flex space-x-3"
      >
        <li
          class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-warning-300"
        />
        <li
          class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
        <li
          class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
        <li
          class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
      </ul>
    </div>
    <div
      class="flex flex-col justify-between sm:flex-row"
    >
      <div
        class="flex items-end justify-between bg-theme-background mt-8 hidden sm:block"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center gap-3"
          >
            <h1
              class="mb-0 text-2xl leading-[29px]"
              data-testid="header__title"
            >
              title
            </h1>
          </div>
          <div
            class="flex items-center leading-5 text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            subtitle
          </div>
        </div>
      </div>
      <div
        class="mt-8 sm:mt-0"
      >
        extra
      </div>
    </div>
  </div>
</DocumentFragment>
`;
